# seq2gif

./: .coveralls.yml  .gitignore  .travis.yml  ChangeLog  Makefile.am  Makefile.in  README.md  color.c  color.h  conf.h  config.h.in  configure  configure.ac  dcs.c  dcs.h  function.c  function.h  gifsave89.c  gifsave89.h  glyph.h  index.html  main.c  makefile  malloc_stub.c  malloc_stub.h  osc.c  osc.h  package.json  package.json.in  params.json  parse.c  parse.h  pseudo.c  pseudo.h  terminal.c  terminal.h  util.c  util.h  wcwidth.h  yaft.h
glyph/: Makefile  conf.h  font.h  milkjf.h  milkjf.txt  mkfont_bdf  mkfont_bdf.c  mplus.h  mplus.txt
tests/data/: CSI-broken.tty  IND.tty  SGR1.tty  color16.tty  ls.tty  sl.tty
tools/: .vimprojects
